@@ -1,3 +1,7 @@
+2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* misc files: implemented MovieClipLoader, there are some bugs yet
+
 2007-04-10  Thatcher Ulrich <tu@tulrich.com>
 
 	* misc files: minimal changes to get gcc-4.0 compile working.  I
